--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				I am a postgraduate at Georgia Institute of Technology, working in the field of Human-Computer Interaction. I like working on projects that enable new possibilities for people with limited technical and social skills. My background in HCI and CS enables me to understand user needs and build technological opportunities that will help solve them. 
 
 
+
 					<!-- My objective is to help
 					<span class="notice">&nbsp;Simplify&nbsp; </span> 
 					technology so that 
@@ -304,29 +305,12 @@
 
 				<div class="col-lg-6 classForHeadingImages">
 					<div class="imageCover">
-						<a href="pages/sherpa.html"><img src="covers/sherpa.png" onmouseover="this.src='covers/sherpa2.png'" onmouseout="this.src='covers/sherpa.png'" /></a>
+						<a href="pages/sherpa.html"><img  class="imageBottom" src="covers/sherpa.png" onmouseover="this.src='covers/sherpa2.png'" onmouseout="this.src='covers/sherpa.png'" /></a>
 					</div>
 				</div>
 				<div class="col-lg-6 classForHeadingImages">
 					<div class="imageCover">
-						<a href="pages/unav.html"><img src="covers/unav.png" onmouseover="this.src='covers/unav2.png'" onmouseout="this.src='covers/unav.png'" /></a>
-					</div>
-				</div>
-
-			</div>
-
-			<br>
-
-			<div class="row">
-
-				<div class="col-lg-6 classForHeadingImages">
-					<div class="imageCover">
-						<a href="pages/mime.html"><img src="covers/mime.png" onmouseover="this.src='covers/mime2.png'" onmouseout="this.src='covers/mime.png'" /></a>
-					</div>
-				</div>
-				<div class="col-lg-6 classForHeadingImages">
-					<div class="imageCover">
-						<a href="pages/virtual.html"><img src="covers/virtual.png" onmouseover="this.src='covers/virtual2.png'" onmouseout="this.src='covers/virtual.png'" /></a>
+						<a href="pages/unav.html"><img class="imageBottom" src="covers/unav.png" onmouseover="this.src='covers/unav2.png'" onmouseout="this.src='covers/unav.png'" /></a>
 					</div>
 				</div>
 
@@ -338,12 +322,35 @@
 
 				<div class="col-lg-6 classForHeadingImages">
 					<div class="imageCover">
-						<a href="pages/jamoora.html"><img src="covers/jamoora.png" onmouseover="this.src='covers/jamoora2.png'" onmouseout="this.src='covers/jamoora.png'" /></a>
+						<a href="pages/mime.html"><img class="imageBottom" src="covers/mime.png" onmouseover="this.src='covers/mime2.png'" onmouseout="this.src='covers/mime.png'" /></a>
+						<a target="_blank" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" title="Google Play Store" ><img src="icons/googlePlayIcon.png"  class="imageTop"  align="center"></a>
+					</div>
+				</div>
+
+				<div class="col-lg-6 classForHeadingImages">
+					<div class="imageCover">
+						<a href="pages/virtual.html"><img  class="imageBottom" src="covers/virtual.png" onmouseover="this.src='covers/virtual2.png'" onmouseout="this.src='covers/virtual.png'" /></a>
+						<a href="https://dl.acm.org/citation.cfm?id=3300286
+			" target="_blank" title="CHI 2019" ><img src="icons/chi2019.png"  class="imageTop chiImg" align="center"></a>
+					</div>
+				</div>
+
+			</div>
+
+			<br>
+
+			<div class="row">
+
+				<div class="col-lg-6 classForHeadingImages">
+					<div class="imageCover">
+						<a href="pages/jamoora.html"><img  class="imageBottom" src="covers/jamoora.png" onmouseover="this.src='covers/jamoora2.png'" onmouseout="this.src='covers/jamoora.png'" /></a>
+						<a href="uist-paper.pdf" target="_blank" title="UIST 2018 | SIC" ><img src="icons/uist2018.png"  class="imageTop chiImg" align="center"></a>
+
 					</div>
 				</div>
 				<div class="col-lg-6 classForHeadingImages">
 					<div class="imageCover">
-						<a href="pages/beat.html"><img src="covers/beat.png" onmouseover="this.src='covers/beat2.png'" onmouseout="this.src='covers/beat.png'" /></a>
+						<a href="pages/beat.html"><img  class="imageBottom" src="covers/beat.png" onmouseover="this.src='covers/beat2.png'" onmouseout="this.src='covers/beat.png'" /></a>
 					</div>
 				</div>
 
