--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 				<div class="col-lg-6 classForHeadingImages">
 					<div class="imageCover">
 						<a href="pages/jamoora.html"><img  class="imageBottom" src="covers/jamoora.png" onmouseover="this.src='covers/jamoora2.png'" onmouseout="this.src='covers/jamoora.png'" /></a>
-						<a href="uist-paper.pdf" target="_blank" title="UIST 2018 | SIC" ><img src="icons/uist2018.png"  class="imageTop chiImg" align="center"></a>
+						<a href="uist-paper.pdf" target="_blank" title="UIST 2018 | SIC" ><img src="icons/uist2018.png"  class="imageTop uistImg" align="center"></a>
 
 					</div>
 				</div>
