--- a/index.html
+++ b/index.html
@@ -322,8 +322,20 @@
 
 				<div class="col-lg-6 classForHeadingImages">
 					<div class="imageCover">
-						<a href="pages/mime.html"><img class="imageBottom" src="covers/mime.png" onmouseover="this.src='covers/mime2.png'" onmouseout="this.src='covers/mime.png'" /></a>
+
+						<!-- <div class="image-container">
+							<a href="pages/mime.html" ><img class="imageBottom hidden" src="covers/mime2.png"></a>
+							<a href="pages/mime.html" ><img class="imageBottom nothidden" src="covers/mime.png"></a>
+						</div> -->
+
+						<!-- <div class="transition">
+							<a href="pages/mime.html" ><img class="imageBottom nothidden" src="covers/mime.png"></a>
+							<a href="pages/mime.html" ><img class="imageBottom hidden" src="covers/mime2.png"></a>
+						</div> -->
+
+						 <a href="pages/mime.html"><img class="imageBottom" src="covers/mime.png" onmouseover="this.src='covers/mime2.png'" onmouseout="this.src='covers/mime.png'" /></a>
 						<a target="_blank" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" title="Google Play Store" ><img src="icons/googlePlayIcon.png"  class="imageTop"  align="center"></a>
+					
 					</div>
 				</div>
 
