--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 				<!-- I am looking for an internship for summer 2020 that will challenge me to solve everyday problems using creative solutions while enabling me to contribute, learn, and grow.  -->
 
-				I am a graduate at Georgia Institute of Technology, working in the field of Human-Computer Interaction. I like working on projects that enable new possibilities for people with limited technical and social skills. My background in HCI and CS enables me to understand user needs and build technological opportunities that will help solve them. 
+				I am a Human-Computer Interaction enthusiast pursuing my master's from Georgia Institute of Technology. I like working on projects that enable new possibilities for people with limited technical and social skills. My background in HCI and CS enables me to understand user needs and build technological opportunities that will help solve them. 
 
 
 
