--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
 					<div class="imageCover">
 						<!-- <a href="pages/sherpa.html"><img  class="imageBottom" src="covers/sherpa.png" onmouseover="this.src='covers/sherpa2.png'" onmouseout="this.src='covers/sherpa.png'" /></a> -->
 						<div class="image-wrapper">
-  							<img src="covers/sherpa.png" />
-						 	<img src="covers/sherpa2.png" class="image-hover"/>
+  							<a href="pages/sherpa.html"><img src="covers/sherpa.png" /></a>
+						 	<a href="pages/sherpa.html"><img src="covers/sherpa2.png" class="image-hover"/></a>
 						</div>
 					</div>
 				</div>
@@ -316,8 +316,8 @@
 					<div class="imageCover">
 						<!-- <a href="pages/unav.html"><img class="imageBottom" src="covers/unav.png" onmouseover="this.src='covers/unav2.png'" onmouseout="this.src='covers/unav.png'" /></a> -->
 						<div class="image-wrapper">
-  							<img src="covers/unav.png" />
-						 	<img src="covers/unav2.png" class="image-hover"/>
+  							<a href="pages/unav.html"><img src="covers/unav.png" /></a>
+						 	<a href="pages/unav2.html"><img src="covers/unav2.png" class="image-hover"/></a>
 						</div>
 					</div>
 				</div>
@@ -334,8 +334,8 @@
 						
 
 						<div class="image-wrapper">
-  							<img src="covers/mime.png" />
-						 	<img src="covers/mime2.png" class="image-hover"/>
+  							<a href="pages/mime.html"><img src="covers/mime.png" /></a>
+						 	<a href="pages/mime.html"><img src="covers/mime2.png" class="image-hover"/></a>
 						</div>
 
 
@@ -350,8 +350,8 @@
 					<div class="imageCover">
 						<!-- <a href="pages/virtual.html"><img  class="imageBottom" src="covers/virtual.png" onmouseover="this.src='covers/virtual2.png'" onmouseout="this.src='covers/virtual.png'" /></a> -->
 						<div class="image-wrapper">
-  							<img src="covers/virtual.png" />
-						 	<img src="covers/virtual2.png" class="image-hover"/>
+  							<a href="pages/virtual.html"><img src="covers/virtual.png" /></a>
+						 	<a href="pages/virtual.html"><img src="covers/virtual2.png" class="image-hover"/></a>
 						</div>
 						<a href="https://dl.acm.org/citation.cfm?id=3300286
 			" target="_blank" title="CHI 2019" ><img src="icons/chi2019.png"  class="imageTop chiImg" align="center"></a>
@@ -368,8 +368,8 @@
 					<div class="imageCover">
 						<!-- <a href="pages/jamoora.html"><img  class="imageBottom" src="covers/jamoora.png" onmouseover="this.src='covers/jamoora2.png'" onmouseout="this.src='covers/jamoora.png'" /></a> -->
 						<div class="image-wrapper">
-  							<img src="covers/jamoora.png" />
-						 	<img src="covers/jamoora2.png" class="image-hover"/>
+  							<a href="pages/jamoora.html"><img src="covers/jamoora.png" /></a>
+						 	<a href="pages/jamoora.html"><img src="covers/jamoora2.png" class="image-hover"/></a>
 						</div>
 						<a href="pages/uist-paper.pdf" target="_blank" title="UIST 2018 | SIC" ><img src="icons/uist2018.png"  class="imageTop uistImg" align="center"></a>
 
@@ -379,8 +379,8 @@
 					<div class="imageCover">
 						<!-- <a href="pages/beat.html"><img  class="imageBottom" src="covers/beat.png" onmouseover="this.src='covers/beat2.png'" onmouseout="this.src='covers/beat.png'" /></a> -->
 						<div class="image-wrapper">
-  							<img src="covers/beat.png" />
-						 	<img src="covers/beat2.png" class="image-hover"/>
+  							<a href="pages/beat.html"><img src="covers/beat.png" /></a>
+						 	<a href="pages/beat.html"><img src="covers/beat2.png" class="image-hover"/></a>
 						</div>
 					</div>
 				</div>
