--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 						<!-- <a href="pages/unav.html"><img class="imageBottom" src="covers/unav.png" onmouseover="this.src='covers/unav2.png'" onmouseout="this.src='covers/unav.png'" /></a> -->
 						<div class="image-wrapper">
   							<a href="pages/unav.html"><img src="covers/unav.png" /></a>
-						 	<a href="pages/unav2.html"><img src="covers/unav2.png" class="image-hover"/></a>
+						 	<a href="pages/unav.html"><img src="covers/unav2.png" class="image-hover"/></a>
 						</div>
 					</div>
 				</div>
