--- a/index.html
+++ b/index.html
@@ -422,22 +422,22 @@
 
 
 					
-				<strong class="topHeading">Problem Statement</strong></br>
+				<strong class="topHeading unavColor">Problem Statement</strong></br>
 				<em>"On The Go"
 				</em> &nbsp;Bicycle Maintenance </br></br>
 
 
-				<strong  class="topHeading">Proposed Solution</strong></br>
+				<strong  class="topHeading unavColor">Proposed Solution</strong></br>
 				Sherpa provides users with a step by step repair guide, which helps users perform repairs through visual and audio instructions. Additionally, it uses augmented reality to help users recognize unknown parts an  d a public repair station locator for users who do not carry necessary repair tools.<br><br>
 
-				<strong  class="topHeading">Role</strong></br>
+				<strong  class="topHeading unavColor">Role</strong></br>
 				I conducted user experience research to guide design decisions and provided technical expertise to judge the feasibility of features.</br><br>
 
 
-				<strong  class="topHeading">Team</strong></br>
+				<strong  class="topHeading unavColor">Team</strong></br>
 				Benton Humphreys, Varnit Jain, Kevin Key, Yunfei Wang </br></br>
 
-				<strong  class="topHeading">Timeline</strong></br>
+				<strong  class="topHeading unavColor">Timeline</strong></br>
 				Aug 2019 - Nov 2019</br></br>
 
 
