--- a/pages/unav.html
+++ b/pages/unav.html
@@ -86,20 +86,20 @@
 
 
 					
-				<strong  class="topHeading">Problem Statement</strong></br>
+				<strong  class="topHeading unavColor unavColor">Problem Statement</strong></br>
 				Increasing accessibility for NCR Kiosks for wheelchair users</br></br>
 
-				<strong class="topHeading">Solution Statement</strong></br>
+				<strong class="topHeading unavColor unavColor">Solution Statement</strong></br>
 				Our solution aims to augment NCR's Kiosk accessibility feature, the uNav interface, by creating an accessibility mode which changes the layout and adds tabbed indexing for faster and smoother checkouts. The uNav Compatibility Mode targets wheelchair users and is compatible with all the current and future hardware solutions.<br><br>
 
-				<strong class="topHeading">Role</strong></br>
+				<strong class="topHeading unavColor unavColor">Role</strong></br>
 			I conducted user experience research to finalize the design direction and performed usability tests on the prototype.
 			<br><br>
 
 
-			<strong class="topHeading">Team</strong></br>
+			<strong class="topHeading unavColor">Team</strong></br>
 			Benton Humphreys, Kevin Key, Varnit Jain, Yunfei Wang </br></br>
-			<strong class="topHeading">Timeline</strong></br>
+			<strong class="topHeading unavColor">Timeline</strong></br>
 			Aug 2019 - Nov 2019</br></br>
 
 
@@ -121,7 +121,7 @@
 		<p class="sectionHeading"><strong>RESEARCH</strong></p><br>
 
 
-	<!-- 	<strong class="topHeading">Market Research</strong>
+	<!-- 	<strong class="topHeading unavColor">Market Research</strong>
 		<p class="contentTextDown">
 			Self-service interactive devices are becoming more prevalent in our daily life and are continuously evolving, these self-service kiosks can be found in fast food restaurants, used as ATMs and acr as check-in stations at airports. While self-serving kiosks are quickly replacing manual service, the importance of accessibility for all consumers is recognized by the society. The Americans with Disabilities Act has required companies to follow regulations that ensure equal access for people with different types of disabilities. According to the ADA, there are certain requirements for technologies to grant people with disabilities with the same access to interactive technology and data, such as enough open space, high and side reach range. <br><br>
 
@@ -130,7 +130,7 @@
 			Though uNav has been found to improve kiosk interaction, the lack of uniform accessibility design between kiosk manufacturers can be and has been problematic for users.  It has been suggested that kiosk manufacturers work together on kiosk accessibility to mitigate these issues. This is an interesting proposition considering that NCR’s patented uNav can be bought as a standalone unit to be implemented in other brands of kiosks.<br><br><br></p> -->
 
 
-			<strong class="topHeading">Literature Review</strong>
+			<strong class="topHeading unavColor">Literature Review</strong>
 			<p class="contentTextDown">
 				There is an ever-growing field of research to suggest best practices for accessibility within digital design, yet there seems to be a lesser focus on integrating accessibility into kiosks. We have sourced, reviewed, and synthesized several prior research papers that either touch on kiosk accessibility or an applicable field (e.g. web design). Some of the key takeaways from literature review are:<br>
 				1. There is a lot of research focusing on the idea of mechanical adjustments. Our approach will not be focused on that  but the idea that a system can recognize and adapt to its user is something to be considered.<br>
@@ -140,7 +140,7 @@
 
 
 
-				<strong class="topHeading">Observation</strong>
+				<strong class="topHeading unavColor">Observation</strong>
 				<p class="contentTextDown">
 
 				In order to better understand how users interact with the current system, our team decided to observe users interacting with the kiosk during lunch hour at NCR. Though our target user group consists of those with disabilities, we found it important to observe all users who might interact with our system. Any design that targets those with physical disabilities will also affect how others interact with the system.<br>
@@ -150,7 +150,7 @@
 
 
 
-				<strong class="topHeading">Task Analysis</strong>
+				<strong class="topHeading unavColor">Task Analysis</strong>
 				<p class="contentTextDown">
 
 				A task analysis allowed us to familiarize ourselves with the overall feel of the system, understand interactions from a high level, and prompted us to understand the limitations of the system for those with physical disabilities. We performed one to primarily learn about the user flow and the decision-making process of a user as they interact with the XK32 kiosk. The ordering process on the XK32 kiosk can involve many steps from start to completion, so it was necessary to understand how these steps connected to one another and how a user typically navigates from the start screen to order completion, and follows them during the entire ordering process. By understanding how the system currently operates, we were able to form a baseline on which we could develop further research efforts.<br><br>
@@ -158,7 +158,7 @@
 
 				<img src="unav-task.png" class="middleImg" width="100%"><br><br>
 
-				<strong class="topHeading">Semi-Structure Interview</strong>
+				<strong class="topHeading unavColor">Semi-Structure Interview</strong>
 				<p class="contentTextDown">
 
 					‍We decided to conduct a semi-structured one-on-one interview as our first research method involving a physically disabled user within the problem space. Our main information goal from this research method was to gain insight into our user group’s wants and needs regarding digital technology accessibility. After conducting our observation it was clear that the kiosk has general usability issues, but we needed to focus on select issues affecting physically disabled users. Another goal was to understand the limitations of wheelchair users during point of sale transactions due to their seated position. Our understanding prior to the interview was that not all kiosks were designed with wheelchair height in mind for usability.
@@ -169,7 +169,7 @@
 
 					<img src="unav-interview.JPG" class="middleImg" width="80%"><br><br>
 
-					<strong class="topHeading">Survey</strong>
+					<strong class="topHeading unavColor">Survey</strong>
 					<p class="contentTextDown">
 
 					We chose an online survey as a research method to collect data largely because of its ability to collect data from a substantial set of users in a short time. We wanted to learn what users with disabilities like and dislike about point of sale kiosks. We wanted to know how users’ disabilities hinder specific interactions with a kiosk. Based on our previous research methods we decided another goal was to learn about common frustrations at each stage of the process of completing a checkout. An secondary information goal was to refine our user group by recognizing common problem areas and patterns. We also wanted to determine if certain users prefer tactile interaction versus touch screen and for completing what tasks.
