--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -150,7 +150,9 @@
 				‍After concluding our two research methods, we decided to use affinity modeling to combine the information we had gathered to find common themes and pain points. We turned the  <span class="sherpaColor">  survey data and interview answers into high quality notes and created the affinity model </span> found below. After completing the affinity model, we  <span class="sherpaColor"> added our own design ideas and questions </span> to areas we found relevant to help with concept generation.</p><br>
 
 
-				<img src="sherpa-research-1.jpg" class="middleImg" width="50%"><br><br>
+				<!-- <img src="sherpa-research-1.jpg" class="middleImg" width="50%"><br><br> -->
+				<img src="sherpa-aff.jpg" class="middleImg" width="70%"><br><br>
+
 
 
 				<strong class="topHeading sherpaColor">Pain Points</strong>
