--- a/pages/unav.html
+++ b/pages/unav.html
@@ -79,7 +79,7 @@
 			<div class="row">
 
 				<div class="col-lg-6 topImg d-flex align-items-center">
-					<img src="unav-main3.png" width="60%" class="phoneImage2">
+					<img src="unav-main4.png" width="70%">
 				</div>
 
 				<div class="col-lg-6 contentText ">
@@ -133,9 +133,11 @@
 			<strong class="topHeading unavColor">Literature Review</strong>
 			<p class="contentTextDown">
 				There is an ever-growing field of research to suggest best practices for accessibility within digital design, yet there seems to be a lesser focus on integrating accessibility into kiosks. We have sourced, reviewed, and synthesized several prior research papers that either touch on kiosk accessibility or an applicable field (e.g. web design). Some of the key takeaways from literature review are:<br>
-				1. There is a lot of research focusing on the idea of mechanical adjustments. Our approach will not be focused on that  but the idea that a system can recognize and adapt to its user is something to be considered.<br>
-				2. Many models exist that can be good reference points if we need to do an overall accessibility test of kiosks, or understanding how other kiosks have improved physical accessibility.<br>
-				3. A good contextual enquiry can be very insightful - they are not only able to correct the user flow but are also able to add additional features.<br><br></p>
+				<ol class="contentTextDown">
+				<li>There is a lot of research focusing on the idea of mechanical adjustments. Our approach will not be focused on that  but the idea that a <span class="unavColor">system can recognize and adapt to its user </span> is something to be considered.<br></li>
+				<li>Many models exist that can be good reference points if we <span class="unavColor"> need to do an overall accessibility test of kiosks </span>, or understanding how other kiosks have improved physical accessibility.<br></li>
+				<li>A good <span class="unavColor"> contextual enquiry can be very insightful </span> - they are not only able to correct the user flow but are also able to add additional features.</li><br><br></ol>
+			</p>
 
 
 
@@ -143,8 +145,8 @@
 				<strong class="topHeading unavColor">Observation</strong>
 				<p class="contentTextDown">
 
-				In order to better understand how users interact with the current system, our team decided to observe users interacting with the kiosk during lunch hour at NCR. Though our target user group consists of those with disabilities, we found it important to observe all users who might interact with our system. Any design that targets those with physical disabilities will also affect how others interact with the system.<br>
-				Our goal with observation was mostly exploratory and built off of our task analysis. We wanted to determine if users experienced difficulty with any point of the ordering process due to usability issues. Additionally, we aimed to explore baseline data on the learnability of the kiosk interface. In short, we wanted to know how a novice user interacts with the system compared to a user that has been familiar with the system for some time. We felt this was an important step in deciding how users of different experience levels interacted with the system, and we rationalized that we could use this information to inform design decisions in subsequent stages.<br></p>
+				In order to better understand how users interact with the current system, we decided to observe users interacting with the kiosk during lunch hour at NCR. Though our target user group consists of those with disabilities, we found it important to observe all users who might interact with our system. Any design that targets those with physical disabilities will also affect how others interact with the system.<br>
+				Our goal with observation was mostly exploratory and built off of our task analysis. We <span class="unavColor">wanted to determine if users experienced difficulty with any point of the ordering process </span> due to usability issues. Additionally, we aimed to explore baseline data on the learnability of the kiosk interface. In short, <span class="unavColor"> we wanted to know how a novice user interacts with the system compared to a user that has been familiar with the system for some time </span>. We felt this was an important step in deciding how users of different experience levels interacted with the system, and we rationalized that we could use this information to inform design decisions in subsequent stages.<br></p>
 
 				<img src="unav-observations.jpg" class="middleImg" width="30%"><br><br>
 
@@ -153,7 +155,7 @@
 				<strong class="topHeading unavColor">Task Analysis</strong>
 				<p class="contentTextDown">
 
-				A task analysis allowed us to familiarize ourselves with the overall feel of the system, understand interactions from a high level, and prompted us to understand the limitations of the system for those with physical disabilities. We performed one to primarily learn about the user flow and the decision-making process of a user as they interact with the XK32 kiosk. The ordering process on the XK32 kiosk can involve many steps from start to completion, so it was necessary to understand how these steps connected to one another and how a user typically navigates from the start screen to order completion, and follows them during the entire ordering process. By understanding how the system currently operates, we were able to form a baseline on which we could develop further research efforts.<br><br>
+				A task analysis allowed us to <span class="unavColor"> familiarize ourselves with the overall feel of the system, understand interactions from a high level, and prompted us to understand the limitations of the system for those with physical disabilities.</span> We performed one to primarily learn about the user flow and the decision-making process of a user as they interact with the XK32 kiosk. The ordering process on the XK32 kiosk can involve many steps from start to completion, so it was necessary to understand how these steps connected to one another and how a user typically navigates from the start screen to order completion, and follows them during the entire ordering process. By understanding how the system currently operates, we were able to form a baseline on which we could develop further research efforts.<br><br>
 				</p>
 
 				<img src="unav-task.png" class="middleImg" width="100%"><br><br>
@@ -161,18 +163,18 @@
 				<strong class="topHeading unavColor">Semi-Structure Interview</strong>
 				<p class="contentTextDown">
 
-					‍We decided to conduct a semi-structured one-on-one interview as our first research method involving a physically disabled user within the problem space. Our main information goal from this research method was to gain insight into our user group’s wants and needs regarding digital technology accessibility. After conducting our observation it was clear that the kiosk has general usability issues, but we needed to focus on select issues affecting physically disabled users. Another goal was to understand the limitations of wheelchair users during point of sale transactions due to their seated position. Our understanding prior to the interview was that not all kiosks were designed with wheelchair height in mind for usability.
+					‍We decided to conduct a semi-structured one-on-one interview as our first research method involving a physically disabled user within the problem space. Our main information goal from this research method was to <span class="unavColor"> gain insight into our user group’s wants and needs regarding digital technology accessibility.</span> After conducting our observation it was clear that <span class="unavColor"> the kiosk has general usability issues, but we needed to focus on select issues affecting physically disabled users.</span> Another goal was to understand the limitations of wheelchair users during point of sale transactions due to their seated position. Our understanding prior to the interview was that not all kiosks were designed with wheelchair height in mind for usability.
 
 					Beyond this, we wanted to determine specific pain points that our interviewee had with kiosk accessibility. We also wanted to know what public technologies they currently found helpful, whether or not it was implemented in point of sale kiosks. We also went into the interview with the idea that we could potentially narrow down our user group if given the opportunity.
 
 					<br><br></p>
 
-					<img src="unav-interview.JPG" class="middleImg" width="80%"><br><br>
+					<img src="unav-interview.JPG" class="middleImg" width="50%"><br><br>
 
 					<strong class="topHeading unavColor">Survey</strong>
 					<p class="contentTextDown">
 
-					We chose an online survey as a research method to collect data largely because of its ability to collect data from a substantial set of users in a short time. We wanted to learn what users with disabilities like and dislike about point of sale kiosks. We wanted to know how users’ disabilities hinder specific interactions with a kiosk. Based on our previous research methods we decided another goal was to learn about common frustrations at each stage of the process of completing a checkout. An secondary information goal was to refine our user group by recognizing common problem areas and patterns. We also wanted to determine if certain users prefer tactile interaction versus touch screen and for completing what tasks.
+					We chose an online survey as a research method to collect data largely because of its ability to collect data from a substantial set of users in a short time. We wanted to <span class="unavColor"> learn what users with disabilities like and dislike about point of sale kiosks. We wanted to know how users’ disabilities hinder specific interactions with a kiosk. </span> Based on our previous research methods we decided another goal was to learn about common frustrations at each stage of the process of completing a checkout. An secondary information goal was to refine our user group by recognizing common problem areas and patterns. We also wanted to determine if certain users prefer tactile interaction versus touch screen and for completing what tasks.
 					<br><br></p>
 
 
@@ -548,24 +550,40 @@
 
 
 
-							<div class="footerAdjust"></div>
+					<div class="footerAdjust"></div>
 
-							<div class="footer">
+					<div class="footer">
 
-								<ul>
-									<li id="overview-color">Overview</li>
-									<li id="research-color">Research</li>
-									<li id="finding-color">Findings</li>
-									<li id="concept-color">Concepts</li>
-									<li id="solution-color">Evaluation</li>
-									<li id="testing-color">Testing</li>
-								</ul>
+						<ul>
+							<li id="overview-color" onclick="location='#overview-tag' ">Overview</li>
+							<li id="research-color" onclick="location='#research-tag' ">Research</li>
+							<li id="finding-color" onclick="location='#finding-tag' ">Findings</li>
+							<li id="concept-color" onclick="location='#concept-tag' ">Concepts</li>
+							<li id="solution-color" onclick="location='#solution-tag' ">Evaluation</li>
+							<li id="testing-color" onclick="location='#testing-tag' ">Testing</li>
+						</ul>
 
-							</div>
+					</div>
+
 
 
 
 <script>
+
+
+	$(function() {
+		// var h1Height = $('h1').height();
+		$('li').click(function (e) {
+			e.preventDefault();
+			var target = $(this.hash);
+			$('html, body').animate({
+				scrollTop: target.offset().top - 200 
+			}, 1000);
+			return false;
+		});
+	});
+
+
 	// Set the date we're counting down to
 	$(document).on('scroll', function() {
 
